[package]
name = "tests"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_spawn = { path = "../src/bevy_replicon_spawn" }
glam = { workspace = true }
serde = { workspace = true }
