[package]
name = "bevy_replicon_spawn"
version = "0.1.0"
edition = "2021"
description = "Bevy replicon spawn event"
repository = "https://github.com/ironpeak/bevy_replicon_spawn"
authors = ["Hrafn Orri Hrafnkelsson <hrafn@vidfjord.is>"]
license = "MIT"
readme = "README.md"
keywords = ["bevy", "network", "replicon"]
categories = ["game-development"]

[dependencies]
bevy_app = { workspace = true }
bevy_ecs = { workspace = true }
bevy_replicon = { workspace = true }
bevy_replicon_spawn_macros = { version = "0.1.0" }
