[package]
name = "bevy_replicon_spawn_macros"
version = "0.1.0"
edition = "2021"
description = "Bevy replicon spawn event macros"
repository = "https://github.com/ironpeak/bevy_replicon_spawn"
authors = ["Hrafn Orri Hrafnkelsson <hrafn@vidfjord.is>"]
license = "MIT"
readme = "README.md"
keywords = ["bevy", "network", "replicon"]
categories = ["game-development"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
